# pyckaxe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: thinkpython.py
src/: app.py  cli.py  gui.py  settings.py
src/pyckaxe/: __init__.py  __main__.py  base.py  core.py  data.py  utils.py
tests/: test_pyckaxe.py
