[tool.poetry]
name = "pyckaxe"
version = "0.1.0"
description = "Python package to speed up web scraper development"
authors = ["Vagner Bessa <bessavagner@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/bessavagner/pyckaxe.git"
keywords = ["scraping", "requests", "webdriver"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Topic :: Software Development :: Libraries :: Python Modules",
	"Programming Language :: Python :: 3.11",
	"Framework :: aiohttp"
]
packages = [{include = "pyckaxe", from = "src"}]
include = [
	{path = "src/app.py"},
	{path = "src/cli.py"},
	{path = "src/gui.py"},
	{path = "src/settings.py"}
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
aiofiles = "^23.1.0"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.65.0"
requests = "^2.29.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
pyckaxe = "pyckaxe.__main__:main"
